<resources>
    <string name="app_name">Login App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="phone_number">Phone Number</string>
    <string name="textview">TextView</string>
    <string name="edit">Edit</string>
    <string name="set_default">Set Default</string>
    <string name="ex_name">Ex Name</string>
    <string name="ex_phone">Ex Phone</string>
    <string name="ex_message">Ex Message</string>
    <string name="homepage_title">Press &amp; Hold for 3 seconds</string>
    <string name="s_o_s">S.O.S</string>
    <string name="button">Button</string>
    <string name="add_contact">Add A Contact</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="edit_a_contact">Edit A Contact</string>
    <string name="change_default_contact">Change Default Contact</string>
    <string name="delete_contact">Delete A Contact</string>
    <string name="apply">Apply</string>
    <string name="phone">Phone</string>
    <string name="current_default_contact">Current Default Contact</string>
    <string name="home">Home</string>
    <string name="full_name_case_sensitive">Full Name (case sensitive)</string>
</resources>
