<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateContact">

    <TextView
        android:id="@+id/logo_add_contact"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/add_contact"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/add_contact_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/add_contact_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/add_contact_message"
        android:layout_width="match_parent"
        android:layout_height="271dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/message"
        android:gravity="start"
        android:inputType="text|textMultiLine"
        android:padding="15dp"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel_contact"
            android:layout_width="167dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="57dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="193dp"
            android:layout_weight="1"
            android:background="@drawable/btn_red"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_add_contact"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="57dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="193dp"
            android:layout_weight="1"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/add"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>