<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/homepage_title"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sos_button"
        android:layout_width="208dp"
        android:layout_height="217dp"
        android:layout_marginLeft="110dp"
        android:background="@drawable/circle_btn"
        android:text="@string/s_o_s"
        android:textColor="@android:color/white"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppinsbold"
        android:text="Send the emergency signal to friends and family"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_contacts_page"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/emergency_contacts"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|bottom">

    </LinearLayout>


</LinearLayout>