<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".CreateContact">

    <TextView
        android:id="@+id/logo_add_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/edit_contact"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/current_info_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Contact's Current Information:"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="9">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="Name: " />

        <TextView
            android:id="@+id/old_contact_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="9">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="Phone: " />

        <TextView
            android:id="@+id/old_contact_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="9">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="Message: " />

        <TextView
            android:id="@+id/old_contact_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:text="TextView" />
    </LinearLayout>

    <TextView
        android:id="@+id/new_info_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:text="Update contact's information below.\nLeave field(s) blank for no change to that field." />

    <EditText
        android:id="@+id/new_contact_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/new_contact_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/new_contact_message"
        android:layout_width="match_parent"
        android:layout_height="281dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:gravity="start"
        android:hint="@string/message"
        android:inputType="text|textMultiLine"
        android:padding="15dp"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center|bottom">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_apply_contact_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#26a69a"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/apply"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>