<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">


    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp" />


    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btn_custom"
        android:baselineAligned="false"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginToreg"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:layout_marginLeft="93dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="25dp"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="@font/roboto_regular"
        android:text="don't you have an account?"
        android:textColor="@android:color/black" />

</LinearLayout>